[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.10.1"
walkdir = "2.5.0"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
clippy = "0.0.302"
rustfmt = "0.10.0"
serde = "1.0.197"
serde_json = "1.0.114"
